# mock-cpp-dec

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
